--- a/portfolio.html
+++ b/portfolio.html
@@ -194,6 +194,7 @@
           </ul>
         </address>
         </div>
+        <div footer-online>
          <div class="footer-soc">
                 <p class="footer-soc-title">Приєднуйтесь</p>
                  <ul class="footer-soc-list list">
@@ -233,6 +234,21 @@
                     </li>
                     </ul>
           </div>
+        </div>
+        <div class="online-wrap">
+        <p class="online-title">Підпишіться на розсилку</p>
+        <form class="online-form">
+            <input type="email" 
+            placeholder="E-mail" 
+            class="online-input" 
+            name="online-name">
+            <button type="submit" class="send-btn">Підписатися
+                <svg class="send-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-telegram"></use>
+                </svg>
+            </button>
+        </form>
+        </div>
         </div>
     </footer>
   </html>
