--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
               </ul>
             </address>
         </div>
+        <div footer-online>
             <div class="footer-soc">
                 <p class="footer-soc-title">Приєднуйтесь</p>
                  <ul class="footer-soc-list list">
@@ -403,6 +404,21 @@
                     </ul>
             </div>
         </div>
+        <div class="online-wrap">
+        <p class="online-title">Підпишіться на розсилку</p>
+        <form class="online-form">
+            <input type="email" 
+            placeholder="E-mail" 
+            class="online-input" 
+            name="online-name">
+            <button type="submit" class="send-btn">Підписатися
+                <svg class="send-icon" width="24" height="24">
+                    <use href="./img/icons.svg#icon-telegram"></use>
+                </svg>
+            </button>
+        </form>
+        </div>
+        </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
@@ -411,6 +427,81 @@
                     <use href="./img/icons.svg#icon-close"></use>
                 </svg>
             </button>
+            <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+            <form class="modal-form">
+            <div class="modal-field">
+            <label for="user-name" class="input-label">Ім'я</label>
+            <div class="input-wrap">
+            <input 
+             type="text" 
+             name="user-name" 
+             class="modal-input"
+             placeholder=" "
+             required
+             id="user-name"
+             />
+             <svg class="modal-input-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-person"></use>
+             </svg>  
+            </div>
+            </div>
+            <div class="modal-field">
+            <label for="user-tel" class="input-label">Телефон</label>
+            <div class="input-wrap"> 
+            <input 
+             type="tel" 
+             name="user-tel" 
+             class="modal-input"
+             placeholder=" "
+             title="+380 (99) 111-11-11"
+             required
+             id="user-tel"
+             />
+             <svg class="modal-input-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-phone-black"></use>
+             </svg>
+            </div>
+            </div>
+            <div class="modal-field">
+            <label for="user-email" class="input-label">Пошта</label>
+             <div class="input-wrap">
+             <input 
+             type="email" 
+             name="user-email" 
+             class="modal-input"
+             placeholder=" "
+             id="user-email"
+             />
+             <svg class="modal-input-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-email-black"></use>
+             </svg>
+             </div>
+             </div>
+            <div class="modal-field">
+            <label for="user-comment" class="input-label">Коментар</label>
+            <textarea 
+            name="user-comment" 
+            id="user-comment" 
+            class="modal-text"
+            placeholder="Введіть текст"
+            ></textarea>
+            </div>
+            <div class="modal-field">
+                <input type="checkbox" 
+                name="privacy" 
+                id="privacy"
+                 class="input-check visually-hidden">
+                <label for="privacy" class="check-text">
+                    <span>
+                        <svg class="check-icon" width="16" height="15">
+                         <use href="./img/icons.svg#icon-check"></use>
+                        </svg>
+                    </span> Погоджуюся з розсилкою та приймаю
+                         <a href="" class="umovy-link">Умови договору</a>
+                </label>
+            </div>
+            <button type="submit" class="modal-btn">Відправити</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script> 
