--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@
                  <div class="team-worker-profession">
                      <h3 class="team-comand">Микола Тарасов</h3>
                      <p lang="en" class="team-special">Marketing</p>
-                      <ul class="team-soc-list list">
                      <ul class="team-soc-list list">
                     <li class="team-soc-item">
                     <a
@@ -311,37 +310,37 @@
             <h2 class="clients-title">Постійні клієнти</h2>
             <ul class="clients-list list">
                 <li class="clients-item">
-                    <a href=""class="clients-item-link link">
+                    <a href="" class="clients-item-link link">
                         <svg class="clients-icon" width="106" height="60">
                             <use href="./img/icons.svg#icon-group"></use>
                         </svg>
                     </a></li>
                 <li class="clients-item">
-                    <a href=""class="clients-item-link link">
+                    <a href="" class="clients-item-link link">
                         <svg class="clients-icon" width="106" height="60">
                             <use href="./img/icons.svg#icon-group2"></use>
                         </svg>
                     </a></li>
                 <li class="clients-item">
-                    <a href=""class="clients-item-link link">
+                    <a href="" class="clients-item-link link">
                         <svg class="clients-icon" width="106" height="60">
                             <use href="./img/icons.svg#icon-group3"></use>
                         </svg>
                     </a></li>
                 <li class="clients-item">
-                    <a href=""class="clients-item-link link">
+                    <a href="" class="clients-item-link link">
                         <svg class="clients-icon" width="106" height="60">
                             <use href="./img/icons.svg#icon-group4"></use>
                         </svg>
                     </a></li>
                 <li class="clients-item">
-                    <a href=""class="clients-item-link link">
+                    <a href="" class="clients-item-link link">
                         <svg class="clients-icon" width="106" height="60">
                             <use href="./img/icons.svg#icon-group5"></use>
                         </svg>
                     </a></li>
                 <li class="clients-item">
-                    <a href=""class="clients-item-link link">
+                    <a href="" class="clients-item-link link">
                         <svg class="clients-icon" width="106" height="60">
                             <use href="./img/icons.svg#icon-group6"></use>
                         </svg>
@@ -362,8 +361,8 @@
                 <li><a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a></li> 
               </ul>
             </address>
-        </div>
-        <div footer-online>
+            </div>
+        <div class="footer-online">
             <div class="footer-soc">
                 <p class="footer-soc-title">Приєднуйтесь</p>
                  <ul class="footer-soc-list list">
@@ -486,7 +485,7 @@
             placeholder="Введіть текст"
             ></textarea>
             </div>
-            <div class="modal-field">
+            <div class="modal-field modal-btn-befor">
                 <input type="checkbox" 
                 name="privacy" 
                 id="privacy"
